# python-refresher-examples

./: README.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation_issue.md
example-python-package/: .gitignore  LICENSE.txt  README.md  main.py  pyproject.toml
example-python-package/calculator/: __init__.py  arithmetic.py
example-python-package/tests/: __init__.py  test_arithmetic.py
